# calendar-todo-list-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  client_setup.json  cpp-prettier  main.cpp
ClientCalDAV/: ClientCalDAV.cpp  ClientCalDAV.h
OAuth/: OAuth.cpp  OAuth.h
provaClientDav/: .clang-format  CMakeLists.txt  main.cpp
provaClientDav/CalendarClient/: CalendarClient.cpp  CalendarClient.h  CalendarClient_CalDAV.cpp  CalendarClient_CalDAV.h  CalendarClient_CalDAV_ReceiveResponse.cpp  CalendarClient_CalDAV_SendRequest.cpp  CalendarClient_CalDAV_StateMachine.cpp  CalendarClient_CalDAV_Utils.cpp  CalendarClient_ICS.cpp  CalendarClient_ICS.h  CalendarClient_ICS_ReceiveResonse.cpp  CalendarClient_ICS_SendRequest.cpp  CalendarClient_ICS_StateMachine.cpp  CalendarEvent.cpp  CalendarEvent.h  CalendarManager.cpp  CalendarManager.h  DateUtils.cpp  DateUtils.h  SimpleCrypt.cpp  SimpleCrypt.h
src/: DateUtils.cpp  DateUtils.h  SimpleCrypt.cpp  SimpleCrypt.h
src/CalDAV/: CalendarClient.cpp  CalendarClient.h  CalendarClient_CalDAV.cpp  CalendarClient_CalDAV.h  CalendarEvent.cpp  CalendarEvent.h  CalendarManager.cpp  CalendarManager.h
src/CalendarEvent/: CalendarEvent.cpp  CalendarEvent.h
src/CalendarManager/: CalendarManager.cpp  CalendarManager.h
src/ClientCalDAV/: CalendarClient.cpp  CalendarClient.h  CalendarClient_CalDAV.cpp  CalendarClient_CalDAV.h  ClientCalDAV.cpp  ClientCalDAV.h  DeleteEvent.cpp  GetCTag.cpp  GetChangedActivity.cpp  GetChangedEvent.cpp  GetEvents.cpp  Handles.cpp  MachineState.cpp  Parsing.cpp  RetrieveCTag.cpp  RetrieveChangedActivity.cpp  RetrieveChangedEvent.cpp  SaveActivity.cpp  SaveEvent.cpp  SaveTask.cpp  ShareCalendar.cpp  SyncToken.cpp  getCTag.cpp
src/GuiComponents/: MainWindow.cpp  MainWindow.h
src/GuiComponents/Calendar/: APImain.cpp  APImain.h  Calendar.cpp  Calendar.h  Category.cpp  Category.h  CustomDialog.cpp  CustomDialog.h  Date.cpp  Date.h  DateUtil.cpp  DateUtil.h  DateUtils.cpp  DateUtils.h  Event.cpp  Event.h  QFrameExtended.cpp  QFrameExtended.h  QLabelEvent.cpp  QLabelEvent.h  QPushButtonExtended.cpp  QPushButtonExtended.h  QWidgetExtended.cpp  QWidgetExtended.h  maincalendar.cpp  maincalendar.h
src/GuiComponents/Calendar/ViewComponent/: customDialog.cpp  customDialog.h  qframe_extended.h  qlabel_event.cpp  qlabel_event.h  qpushbutton_extended.cpp  qpushbutton_extended.h  qwidget_extended.h
src/GuiComponents/Calendar/ViewComponent/API/: APImain.cpp  APImain.h
src/GuiComponents/Calendar/ViewComponent/Utils/: dateutil.h
src/GuiComponents/Calendar/ViewComponents/: CustomDialog.cpp  CustomDialog.h  QFrameExtended.h  QLabelEvent.h  QPushButtonExtended.h  QWidgetExtended.cpp
src/GuiComponents/Calendar/ViewComponents/API/: APImain.h
src/GuiComponents/Calendar/ViewComponents/Model/: Category.cpp  Category.h  Date.cpp
src/GuiComponents/Calendar/ViewComponents/Utils/: DateUtils.cpp  DateUtils.h
src/GuiComponents/Calendar/viewComponent/: customdialog.cpp  newEventDialog.cpp  newEventDialog.h  qframe_extended.h  qlabel_event.h  qpushbutton_extended.h  qwidget_extended.cpp
src/GuiComponents/Calendar/viewComponent/API/: APImain.h
src/GuiComponents/Calendar/viewComponent/model/: event.h
src/GuiComponents/Calendar/viewComponent/util/: dateutil.cpp  dateutil.h
src/GuiComponents/ErrorDialog/: ErrorDialog.cpp  ErrorDialog.h
src/GuiComponents/NewCalendar/: NewCalendarDialog.cpp  NewCalendarDialog.h  WindowNewCalendar.cpp  WindowNewCalendar.h
src/GuiComponents/NewEvent/: NewEventDialog.cpp  NewEventDialog.h
src/GuiComponents/ShareCalendar/: ShareCalendarDialog.cpp  ShareCalendarDialog.h
src/GuiComponents/ToDoList/: QCheckBoxExtended.cpp  QCheckBoxExtended.h  QPushButtonExtendedTD.cpp  QPushButtonExtendedTD.h  ToDoList.cpp  ToDoList.h
src/OAuth2/: OAuth.cpp  OAuth.h  README.md
src/Task/: TaskElement.cpp  TaskElement.h  TasksManager.cpp  TasksManager.h
src/Utils/: ColorUtils.cpp  ColorUtils.h  DateUtils.cpp  DateUtils.h  SimpleCrypt.cpp  SimpleCrypt.h
